content/docs/v1.5/configuration/triggers/telegram/index.mdx
---
title: "Telegram"
description: "The telegram trigger lets you send realtime notifications using Telegram bots."
---

import { Callout } from 'fumadocs-ui/components/callout';
import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

![logo](/docs/assets/configuration/triggers/telegram/telegram.png)

The `telegram` trigger lets you send realtime notifications using [Telegram](https://telegram.org/) bots.

## Variables

| Env var | Required | Description | Supported values | Default value when missing |
| --- | :---: | --- | --- | --- |
| `DD_NOTIFICATION_TELEGRAM_{trigger_name}_BOTTOKEN` | 🔴 | The Bot token | | |
| `DD_NOTIFICATION_TELEGRAM_{trigger_name}_CHATID` | 🔴 | The Chat ID | | |
| `DD_NOTIFICATION_TELEGRAM_{trigger_name}_DISABLETITLE` | ⚪ | Disable title to have full control over the message formatting | `true`, `false` | `false` |
| `DD_NOTIFICATION_TELEGRAM_{trigger_name}_MESSAGEFORMAT` | ⚪ | Send the message as markdown or as html (useful for custom message formatting). `Markdown` uses Telegram's [MarkdownV2](https://core.telegram.org/bots/api#markdownv2-style) parse mode, which requires escaping special characters. Case-insensitive. | `Markdown`, `HTML` | `Markdown` |

<Callout type="info">This trigger also supports the [common configuration variables](/docs/configuration/triggers/#common-trigger-configuration).</Callout>

## Examples

### Configuration

<Tabs items={["Docker Compose", "Docker"]}>
<Tab value="Docker Compose">

```yaml
services:
  drydock:
    image: codeswhat/drydock:v1.5.2
    ...
    environment:
      - DD_NOTIFICATION_TELEGRAM_1_BOTTOKEN=replace-with-your-telegram-bot-token
      - DD_NOTIFICATION_TELEGRAM_1_CHATID=9876543210
```

</Tab>
<Tab value="Docker">
```bash
docker run \
  -e DD_NOTIFICATION_TELEGRAM_1_BOTTOKEN="replace-with-your-telegram-bot-token" \
  -e DD_NOTIFICATION_TELEGRAM_1_CHATID="9876543210" \
  ...
  codeswhat/drydock:v1.5.2
```
</Tab>
</Tabs>

## How to create a bot and get the bot token

[Follow this tutorial](https://medium.com/geekculture/generate-telegram-token-for-bot-api-d26faf9bf064)

## How to get the chat id

[Follow this tutorial](https://www.alphr.com/find-chat-id-telegram/)
